# Gigen-Engine-Old

./: .gitignore  CMakeLists.txt  README.md
CMakeModules/: FindBullet.cmake
Dependencies/Assimp/include/assimp/: BlobIOSystem.h  XmlParser.h
Dependencies/Assimp/lib/Debug/: assimp-vc142-mtd.exp
Dependencies/Assimp/lib/Release/: assimp-vc142-mt.exp
Dependencies/BULLET/lib/Debug/: Bullet2FileLoader_Debug.lib  Bullet3Collision_Debug.lib  Bullet3Common_Debug.lib  Bullet3Dynamics_Debug.lib  Bullet3Geometry_Debug.lib  BulletDNA_Debug.lib  BulletFileLoader_Debug.lib  BulletInverseDynamicsUtils_Debug.lib  BulletInverseDynamics_Debug.lib  BulletRoboticsGUI_Debug.lib  BulletWorldImporter_Debug.lib  BulletXmlWorldImporter_Debug.lib  BussIK_Debug.lib  ConvexDecomposition_Debug.lib  GIMPACTUtils_Debug.lib  LinearMath_Debug.lib  OpenGLWindow_Debug.lib  clsocket_Debug.lib
Dependencies/BULLET/lib/Release/: BulletCollision.lib  BulletDynamics.lib  LinearMath.lib
Dependencies/IMGUI/: imgui.cpp  imgui.h
Documentations/: Inputs GigEngine.docx  NormeConfig.txt  Trello link.txt  UML link.txt
Engine/: CMakeLists.TXT
Engine/Include/: Application.h  Component.h  FixedQueue.h  Frames.h  GameObject.h  Model.h  Texture.h  Transform.h  Vertex.h  Window.h
Engine/Sources/: Application.cpp  Component.cpp  Frames.cpp  FreeCam.cpp  Model.cpp  Texture.cpp  Transform.cpp  Window.cpp
GigEngine/: CMakeLists.txt
GigEngine/Editor/: CMakeLists.txt
GigEngine/Editor/Sources/: Console.cpp  Displayable.cpp  EditorCamera.cpp  FPSDisplay.cpp  FileDisplay.cpp  FileExplorer.cpp  GameObjectInspector.cpp  HierarchyDisplay.cpp  Interface.cpp  InterfaceManager.cpp  MenuBarDisplay.cpp  ToolsDisplay.cpp
GigEngine/Editor/include/: Console.h  Displayable.h  EditorCamera.h  FPSDisplay.h  FileDisplay.h  FileExplorer.h  GameObjectInspector.h  HierarchyDisplay.h  IconsMaterialDesignIcons.h  Interface.h  InterfaceManager.h  MenuBarDisplay.h  ToolsDisplay.h
GigEngine/Engine/: CMakeLists.txt
GigEngine/Engine/Headers/: GameObjectManager.h
GigEngine/Engine/Sources/: Animation.cpp  Animator.cpp  Application.cpp  AudioSource.cpp  BoneInfo.cpp  Camera.cpp  Component.cpp  DrawLine.cpp  Font.cpp  GameObject.cpp  GameObjectManager.cpp  IResource.cpp  Inputs.cpp  Light.cpp  Log.cpp  Material.cpp  Mesh.cpp  Model.cpp  ModelLoader.cpp  Object.cpp  RectTransform.cpp  Renderer.cpp  ResourceManager.cpp  SceneSaver.cpp  Shader.cpp  ShadowMapping.cpp  Skybox.cpp  Texture.cpp  ThreadPool.cpp  Transform.cpp  UIElement.cpp  UIImage.cpp  UIManager.cpp  UIText.cpp  Watch.cpp  Window.cpp
GigEngine/Engine/include/: Animation.h  Animator.h  Application.h  AudioSource.h  BoneInfo.h  Camera.h  Component.h  DrawLine.h  Font.h  GameObject.h  GameObjectManager.h  IResource.h  Inputs.h  Light.h  Log.h  Material.h  Mesh.h  Model.h  ModelLoader.h  Object.h  RectTransform.h  Renderer.h  ResourceManager.h  ResourceManager.inl  SceneSaver.h  Shader.h  ShadowMapping.h  Skybox.h  Texture.h  ThreadPool.h  Transform.h  UIElement.h  UIImage.h  UIManager.h  UIText.h  Watch.h  Window.h
GigEngine/Main/Sources/: main.cpp
GigEngine/MathsTest/: CMakeLists.txt
GigEngine/MathsTest/Sources/: Mat3_UnitTest.cpp  Mat4_UnitTest.cpp  Quaternion_UnitTest.cpp  Vec2_UnitTest.cpp  Vec3_UnitTest.cpp  Vec3_UnitTestDouble.cpp  Vec4_UnitTest.cpp  main.cpp
GigEngine/Physics/: CMakeLists.txt
GigEngine/Physics/Sources/: BoxRigidBody.cpp  CapsuleRigidBody.cpp  CustomMotionState.cpp  DebugDrawer.cpp  RigidBody.cpp  SphereRigidBody.cpp  WorldPhysics.cpp
GigEngine/Physics/include/: BoxRigidBody.h  CapsuleRigidBody.h  CustomMotionState.h  DebugDrawer.h  RigidBody.h  SphereRigidBody.h  WorldPhysics.h
GigEngine/Scripting/: CMakeLists.txt
GigEngine/Scripting/Sources/: Behaviour.cpp  LuaBindComponent.cpp  LuaBindGameObject.cpp  LuaBindGlobal.cpp  LuaBindMath.cpp  LuaBinder.cpp  ScriptInterpreter.cpp
GigEngine/Scripting/include/: Behaviour.h  Behaviour.inl  LuaBindComponent.h  LuaBindGameObject.h  LuaBindGlobal.h  LuaBindMath.h  LuaBinder.h  ScriptInterpreter.h
Resources/Editor/Models/: untitled.fbx
Resources/Editor/Scripts/: KillerBox.lua  NewScript0.lua  NewScript1.lua  NewScript2.lua  NewScript3.lua  NewScript4.lua  NewScript5.lua  NewScript6.lua  Player.lua  SpaceBox.lua  test.lua
Resources/Engine/Animations/: Idle.fbx  Run.fbx  Swimming.fbx
Resources/Engine/Models/: MM_Walk_Fwd.fbx  WorkLight.fbx
Resources/Engine/Models/Basics/: Cube.FBX  IcoSphere.fbx  Plane.FBX  Sphere.FBX
Resources/Engine/Shaders/: UIFragText.frag  UIVertText.vert  core_frag.frag  core_vert.vert  fragSkybox.frag  shadow.vert  vertAnim.vert  vertLine.vert  vertSkybox.vert
Resources/Models/Basics/: Capsule.FBX  Cone.FBX  Cube.FBX  Cylinder.FBX  Plane.FBX  Sphere.FBX  imgui.ini
Resources/Scenes/: bob.chad
Resources/Shaders/: core_frag.frag  core_vert.vert  fragLine.frag  fragSkybox.frag  vertSkybox.vert
project/: CMakeLists.txt
project/LibMaths/: LibMaths.vcxproj  LibMaths.vcxproj.filters
project/LibMaths/Mat4/: Mat4.h
project/LibMaths/Vec3/: Vec3.h
project/include/: Application.h  Camera.h  Component.h  FreeCam.h  GameObjectManager.h  Inputs.h  Mesh.h  Texture.h  Watch.h  Window.h
project/shaders/: frag.frag  vert.vert
project/src/: Application.cpp  Camera.cpp  GameObject.cpp  GameObjectManager.cpp  Mesh.cpp  Vertex.cpp  Watch.cpp  Window.cpp  main.cpp
